# gbfs_analytics

./: .flake8  .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
examples/: bugSquatch_bikewatch.ipynb  readme.txt
gbfs_analytics/: README.md  gbfs_manager.py
src/gbfs_analytics/: __init__.py  config.py  data_structures.py  gbfs_feed.py  gbfs_manager.py  gbfs_timeseries.py  gbfsfeed.py  utils.py
tests/unit/: __init__.py  conftest.py  test_gbfs_feed.py
